# crop-pulse

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 20240105035254_create_crop_transaction.sql  20240105083057_create_crop_transaction.sql  20240107040140_create_daily_crop_transactions.sql  20240108112411_create_crops.sql  20240109084201_create_crops_summary_14_days.sql
src/: main.rs
src/client/: crop_transaction.rs  mod.rs
src/cmd/: aggregate_daliy_crop_summary.rs  mod.rs
src/db/: mod.rs  pool.rs
src/db/data/: crop_transactions.rs  crops.rs  crops_summary_14_days.rs  daily_crop_transactions.rs  mod.rs
src/helpers/: date.rs
src/logger/: mod.rs
src/statistic/: basic.rs  daily_summary.rs  mod.rs
