[package]
name = "crop-pulse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1", features = ["rt", "macros"]}
anyhow = "1.0.79"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
async_once = "0.2.6"
