[package]
name = "crop-pulse"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aggregate_daily_crop_transactions"
path = "src/bin/aggregate_daily_crop_transactions.rs"

[[bin]]
name = "fetch_crop_transactions"
path = "src/bin/fetch_crop_transactions.rs"

[[bin]]
name = "daily_crop_summary"
path = "src/bin/daily_crop_summary.rs"

[[bin]]
name = "playground"
path = "src/bin/playground.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1", features = ["full"]}
anyhow = "1.0.79"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
async_once = "0.2.6"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
digest = "0.10.7"
thiserror = "1.0.56"
clap = { version = "4.4.13", features = ["derive"] }
chrono = "0.4.31"
linregress = "0.5.3"
futures = "0.3.30"
